syntax = "proto3";
option go_package = "github.com/torabian/fireback/modules/workspaces";
import "modules/workspaces/CapabilityDefinitions.dyno.proto";

/**
* Add your custom services, and messages here.
* It can be your dto for example. 
* - Use Module.yml for entities, otherwise it won't be managed
* - Don't use this file for entities might be queried by web
**/
      
message CapabilityChild {
	string uniqueId = 1;
	repeated CapabilityChild children = 2;
	optional string visibility = 3; // @tag(yaml:"visibility")
	int64 updated = 4; // @tag(gorm:"autoUpdateTime:nano")
  	int64 created = 5; // @tag(gorm:"autoUpdateTime:nano")
}


message CapabilitiesResult {
	repeated CapabilityEntity capabilities = 1;
	repeated CapabilityChild nested = 2;
	optional string visibility = 3; // @tag(yaml:"visibility")
	int64 updated = 4; // @tag(gorm:"autoUpdateTime:nano")
  	int64 created = 5; // @tag(gorm:"autoUpdateTime:nano")

}